# TMetaType

./: BUILD.gn  README.md
src/: TMetaObject.cpp  TMetaObject.h  TMetaProperty.cpp  TMetaProperty.h  TMetaType.cpp  TMetaType.h  TMetaTypeHeaderMacros.h  TMetaTypeImplMacros.h  TMetaTypeMacrosInternal.h  TTypeTraits.h  TVariant.cpp  TVariant.h  TVariantHelper.h
tests/: TMetaTypeTests.cpp
